syntax = "proto3";

option csharp_namespace = "GridSystem.Web.Server.Core";

package core;

service Core {
  rpc SetStatus (SetStatusRequest) returns (SetStatusResponse);
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message SetStatusRequest {
  string userId = 1;
  string key = 2;
  int32 status = 3;
}

message SetStatusResponse {
  bool isSucceed = 1;
  int32 status = 2;
  string error = 3;
}

message GetStatusRequest {
  string userId = 1;
  string key = 2;
}

message GetStatusResponse {
  bool isSucceed = 1;
  int32 status = 2;
  string error = 3;
  int32 userStatus = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isSucceed = 1;
  int32 status = 2;
  string error = 3;
}